[gd_scene load_steps=6 format=2]

[ext_resource path="res://effects/BloodSpray.gd" type="Script" id=1]
[ext_resource path="res://common/assets/sounds/spray_short_1.ogg" type="AudioStream" id=2]
[ext_resource path="res://enemies/HeadyHandBaller/assets/projectile.png" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
albedo_color = Color( 0.584314, 0.00784314, 0.00784314, 1 )
albedo_texture = ExtResource( 3 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 0.0

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 0.5, 0.5 )

[node name="BloodSpray" type="Spatial"]
transform = Transform( 0.15, 0, 0, 0, 0.05, 0, 0, 0, 0.15, 0, 0, 0 )
script = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles" parent="."]
emitting = false
amount = 100
lifetime = 0.29
one_shot = true
speed_scale = 10.26
explosiveness = 0.14
mesh = SubResource( 2 )
emission_shape = 1
emission_sphere_radius = 1.6
direction = Vector3( 0, 0, 0 )
spread = 96.52
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
scale_amount = 3.0
color = Color( 0.494118, 0.00784314, 0.00784314, 1 )

[node name="LifeTimer" type="Timer" parent="."]

[node name="SprayStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 10.398
pitch_scale = 1.77
autoplay = true
